force-app/main/default/objects/Supplier__c/fields/Supplier_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Code__c</fullName>
    <label>Supplier Code</label>
    <description>Unique supplier code for integration and identification purposes</description>
    <inlineHelpText>Unique identifier for this supplier. Used for integrations, reporting, and supplier management systems.</inlineHelpText>
    <type>Text</type>
    <length>10</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>