force-app/main/default/objects/Supplier__c/fields/Supplier_Rating__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Rating__c</fullName>
    <label>Supplier Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetName>Supplier_Rating</valueSetName>
    </valueSet>
</CustomField>