force-app/main/default/objects/Supplier__c/validationRules/Valid_Supplier_Email_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Supplier_Email_Format</fullName>
    <active>true</active>
    <description>Ensures that Supplier Email follows proper email format when provided</description>
    <errorConditionFormula>NOT(ISBLANK(Email__c)) &amp;&amp; 
NOT(REGEX(Email__c, "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$"))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please enter a valid email address format (e.g., contact@supplier.com).</errorMessage>
</ValidationRule>