force-app/main/default/objects/Supplier__c/listViews/All_Suppliers_Enhanced.listView-meta.xml
<ListView>
    <fullName>All_Suppliers_Enhanced</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Country__c</columns>
    <columns>Supplier_Rating__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Suppliers Enhanced</label>
</ListView>